--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
-    <string name="app_name">Demo Application</string>
+    <string name="app_name">Demo</string>
+    <string name="one">ONE</string>
+
+    <string name="two">TWO</string>
+
+    <string name="three">THREE</string>
+
+    <string name="four">FOUR</string>
+
+
 </resources>
