fix: 框架初步搭建

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,8 @@
 <resources>
     <string name="app_name">Demo</string>
-    <string name="one">ONE</string>
-
-    <string name="two">TWO</string>
-
-    <string name="three">THREE</string>
-
-    <string name="four">FOUR</string>
-
+    <string name="tab_home">首页</string>
+    <string name="tab_square">广场</string>
+    <string name="tab_news">消息</string>
+    <string name="tab_me">我的</string>
 
 </resources>
