--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Demo</string>
     <string name="tab_home">首页</string>
     <string name="tab_square">上班</string>
-    <string name="tab_news">消息</string>
-    <string name="tab_me">我的</string>
+    <string name="tab_news">动画</string>
+    <string name="tab_me">交互</string>
 
 </resources>
