--- a/uilibrary/src/main/res/values/strings.xml
+++ b/uilibrary/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="refresh_footer_tips">- THE END -</string>
+    <string name="refresh_footer_tips">THE END</string>
 </resources>
